ingress/charts/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mattermost
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - mm.dylanschmittle.casa
    secretName: letsencrypt-prod
  rules:
  - host: mm.dylanschmittle.casa
    http:
      paths:
      - backend:
          serviceName: mattermost
          servicePort: 8065
        path: /
        pathType: ImplementationSpecific
